frame_webapp_test/src/main/webapp/error/404.jsp
<%@ page language="java" contentType="text/html; charset=UTF-8"
    pageEncoding="UTF-8" isErrorPage="true"%><% 	
%>
<%@ page import="java.io.*,java.util.*"%>
<div style="height: 50px; overflow: auto;">
	你要请求的URL不存在
</div>